# tts

./: .gitignore  README.md  go.mod  pyproject.toml  setup.cfg
.github/workflows/: release-binaries.yml  release-launchers.yml
cmd/tts-client/: detach_windows.go  main.go
scripts/: benchmark-model-candidates.sh  build-binary.sh  build-launchers.sh  install-model-candidate-envs.sh  stt_launcher.py  tts_launcher.py
src/stt_cli/: __init__.py  audio.py  cli.py  config.py  power.py
src/stt_cli/backends/: kokoro.py  model_audio.py  neutts.py  system.py  torch_runtime.py  vibevoice.py
src/tts/: __init__.py  audio.py  cli.py  config.py  daemon.py  mpris.py  mpris_helper.py  playback.py
src/tts/backends/: __init__.py  chatterbox.py  kokoro.py  omnivoice.py  onnx.py  qwen3.py  vibevoice.py
tests/: test_cli.py
