[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tts"
version = "0.1.10"
description = "Small cross-platform speech CLI for agent status updates."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Marvin" }]
dependencies = []

[project.optional-dependencies]
onnx = ["sherpa-onnx>=1.12.0", "soundfile>=0.12"]
vibevoice = [
    "vibevoice[streamingtts] @ git+https://github.com/microsoft/VibeVoice.git ; python_version >= '3.10'",
    "torch>=2.6; python_version >= '3.10'",
    "soundfile>=0.12; python_version >= '3.10'",
]
qwen3 = ["qwen-tts>=0.1.0; python_version >= '3.10'", "torch>=2.6; python_version >= '3.10'"]
chatterbox = ["chatterbox-tts>=0.1.3; python_version >= '3.10'", "torch>=2.6; python_version >= '3.10'"]
kokoro = [
    "kokoro>=0.7.16; python_version >= '3.10'",
    "torch>=2.6; python_version >= '3.10'",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl ; python_version >= '3.10'",
]
neutts = ["neutts>=0.1.0; python_version >= '3.10'", "torch>=2.6; python_version >= '3.10'"]
omnivoice = [
    "omnivoice @ git+https://github.com/k2-fsa/OmniVoice.git ; python_version >= '3.10'",
    "torch>=2.6; python_version >= '3.10'",
]
models = [
    "qwen-tts>=0.1.0; python_version >= '3.10'",
    "chatterbox-tts>=0.1.3; python_version >= '3.10'",
    "kokoro>=0.7.16; python_version >= '3.10'",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl ; python_version >= '3.10'",
    "neutts>=0.1.0; python_version >= '3.10'",
    "omnivoice @ git+https://github.com/k2-fsa/OmniVoice.git ; python_version >= '3.10'",
    "vibevoice[streamingtts] @ git+https://github.com/microsoft/VibeVoice.git ; python_version >= '3.10'",
    "torch>=2.6; python_version >= '3.10'",
    "soundfile>=0.12; python_version >= '3.10'",
]
dev = ["pytest>=8.0"]

[project.scripts]
tts = "tts.cli:main"
tts-cli = "tts.cli:main"
tts-say = "tts.cli:main_say"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
