[metadata]
name = stt-cli
version = 0.1.0
description = Small cross-platform speech CLI for agent status updates.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = Marvin

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    stt-cli = stt_cli.cli:main
    stt-say = stt_cli.cli:main_say
