[metadata]
name = tts
version = 0.1.8
description = Small cross-platform speech CLI for agent status updates.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = Marvin

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    tts = tts.cli:main
    tts-cli = tts.cli:main
    tts-say = tts.cli:main_say
